# ESP32s3_learning

./: README.md
EZZ_LVGL_demo/: CMakeLists.txt  sdkconfig  sdkconfig.old
EZZ_LVGL_demo/main/: CMakeLists.txt  EZZ_LVGL_demo.c  display_ui.c
EZZ_LVGL_demo/main/src/SDdriver/: sd_driver.c
EZZ_LVGL_demo/main/src/lvglFs/: lv_port_fs.c
EZZ_LVGL_demo/main/src/ui/: images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui_image_capuf_logo.c  ui_image_es_p32_programmer_v2_360x222.c  ui_image_usb_to_uart_360x152.c
lcd_lvgl/: sdkconfig  sdkconfig.old
lcd_lvgl/components/lvgl__lvgl/src/misc/: lv_ll.c
lcd_lvgl/fonts/: Teko_Bold_20_4bpp.c
lcd_lvgl/main/: CMakeLists.txt  display_ui.c  idf_component.yml  lcd_lvgl.c  lcd_lvgl.h  lv_port_disp.c
lcd_lvgl/main/fonts/: PlaywriteNL_Regular_40_4bpp.c  Playwrite_Polska_30_1bpp.c  Teko_Bold_20_4bpp.c  Teko_Bold_40_4bpp.c  Teko_Medium_40_4bpp.c  Teko_Regular_40_1bpp.c  fonts.h  ui_font_interb64.c
lcd_lvgl/main/images/: capuf_logo.c  images.h
lcd_lvgl/main/lv_fs/: lv_fs_interface.c  lv_port_fs.c
lcd_lvgl/main/sd_card/: sd_card.c  sd_card.h
my_ota/: CMakeLists.txt  sdkconfig  sdkconfig.old
my_ota/main/: CMakeLists.txt  my_ota.c
my_ota/main/src/sd_card_driver/: sd_card.c  sd_card.h
