idf_component_register( SRCS            "EZZ_LVGL_demo.c"
                                        "src/lvgl/fs/lv_port_fs.c"
                                        "src/SDdriver/sd_driver.c"        
                        INCLUDE_DIRS    "." 
                                        "src/lvgl/fs/"
                                        "src/SDdriver/")
