idf_component_register(SRCS "lcd_lvgl.c" 
                            "display_ui.c" 
                            "fonts/Playwrite_Polska_30_1bpp.c" 
                            "fonts/Teko_Bold_20_4bpp.c" 
                            "fonts/ui_font_interb64.c"
                            "fonts/Teko_Regular_40_1bpp.c"
                            "fonts/Teko_Medium_40_4bpp.c"
                            "fonts/Teko_Bold_40_4bpp"
                            "fonts/PlaywriteNL_Regular_40_4bpp"
                            "sd_card/sd_card.c"
                            "lv_fs/lv_port_fs.c"
                            "images/capuf_logo.c"
                    INCLUDE_DIRS    "." 
                                    "fonts/" 
                                    "images/"
                                    "sd_card/"
                                    "lv_fs/")
